; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_mtx-1_wdt.c_mtx1_wdt_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_mtx-1_wdt.c_mtx1_wdt_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }

@EIO = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.file*, i8*, i64, i32*)* @mtx1_wdt_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mtx1_wdt_write(%struct.file* %0, i8* %1, i64 %2, i32* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.file*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  store %struct.file* %0, %struct.file** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32* %3, i32** %9, align 8
  %10 = load i64, i64* %8, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %4
  %13 = load i64, i64* @EIO, align 8
  %14 = sub i64 0, %13
  store i64 %14, i64* %5, align 8
  br label %18

15:                                               ; preds = %4
  %16 = call i32 (...) @mtx1_wdt_reset()
  %17 = load i64, i64* %8, align 8
  store i64 %17, i64* %5, align 8
  br label %18

18:                                               ; preds = %15, %12
  %19 = load i64, i64* %5, align 8
  ret i64 %19
}

declare dso_local i32 @mtx1_wdt_reset(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
